# codes

./: README.md
TcYuvX/: TcYuvX.cpp  TcYuvX.h
burn_tools-producer/: build_producer_ak39.sh
camera_rgb/: HWCameraCmd.h  Makefile  cam_disp21.c  camera
camera_yuv/: HWCameraCmd.h  Makefile  cam_disp21-----.c  cam_disp21.c  camera  camera_ok  camera_save
hi3536_mouse_ui/: .qmake.stash  Makefile  hi3536_mouse_ui.pro  moc_CameraWidget.cpp  moc_QVideoThread.cpp  moc_QVideoWidget.cpp  moc_glmainwindow.cpp  moc_glwidget.cpp  moc_lcdform.cpp  moc_mainwindow.cpp  moc_openglwindow.cpp  moc_predefs.h  moc_rtspclient.cpp  moc_streamDaemon.cpp  moc_widget.cpp  qrc_zmj_nvr_res.cpp  qt_zmj_nvr.pro.user.4.8-pre1  qt_zmj_nvr.pro.user.86c885f  qt_zmj_nvr.pro.user.ce62762.20  sample_hifb.c  ui_CameraWidget.h  ui_QVideoWidget.h  ui_lcdform.h  ui_mainwindow.h
i2c_demo/: i2c-test  i2c-test-wr  i2c-test-wr.c  i2c-test.c
ic_card/: card  com.c  err.h  id_card
lcd_init/: Makefile  lcd_init  lcd_init.pro  main.cpp
locker logo tools/: Makefile  logo.h  mainwindow.ui
locker_logo_tools/: Makefile.Debug  Makefile.Release  main.cpp  (+4 more)
rtspServer/: CMakeCache.txt  CMakeLists.txt  DynamicRTSPServer.cpp  DynamicRTSPServer.hh  H264FramedLiveSource.cpp  H264FramedLiveSource.hh  H264LiveVideoServerMediaSubssion1.cpp  H264LiveVideoServerMediaSubssion1.hh  H265LiveVideoServerMediaSubssion.cpp  H265LiveVideoServerMediaSubssion.hh  Makefile  Workthread.cpp  Workthread.h  cmake_install.cmake  fileName  itcRtspClient.cpp  itcRtspClient.hpp  main.cpp  rtspServer  rtspServer.pro  version.hh
(+712 files in other folders)
